Version 5.0.0.6 - * 2011

- Fixed an nil pointer read crash in the append closing brace code.
- Updated the comment/uncomment functions.
- The variable scanner now also supports local variables in non-class functions.
- The scanner now does not scan the same word twice (making it 2x faster).
- The Environment Options window now does not crash when its not allowed to edit file associations.
- One can now use Ctrl+Scroll to edit text size, just like in browsers.
- Files now open up much faster thanks to avoiding repaints.

Version 5.0.0.5 - 24 Oktober 2011

- Rewritten the tooltip generator. It now uses better code scanning techniques and does not show up above what you were typing anymore.
- Brace completion is now disabled inside strings and comments. It now also supports closing the < character.
- The tooltip now also works when typing foo[bar].member and hovering above member.
- The empty project now contains an empty Untitled unsaved file. Why would anyone NOT want or need that?
- The function tooltip now also displays tips for completed and empty function parameter bodies.
- The < character is now only inserted in lines starting with '#include'.
- Highlighting checks in plain files now do not cause Dev to crash.
- The Tips of the Day are back again!
- The tab position of the editor is now changeable.
- This version now uses a nine years more recent mingw32-make.exe makefile processor! The old GNU one will be omitted from the installer.
- Projects are now saved upon creation.
- Fixed two out-of-bounds errors in tooltip generation and code completion.
- The source code is now more user friendly (DevCpp.dpk wouldn't compile straight away since some version), and 50% smaller.
- Dev can now automatically log compiler messages to disk (the option can be found in Project Options >> Build Options).
- The obj output directory now does not get created in the wrong 'current directory' in rare cases.