@@ -5,8 +5,9 @@ Version 5.0.0.6 - * 2011
 - The variable scanner now also supports local variables in non-class functions.
 - The scanner now does not scan the same word twice (making it 2x faster).
 - The Environment Options window now does not crash when its not allowed to edit file associations.
-- One can now use Ctrl+Scroll to edit text size, just like in browsers.
+- One can now use Ctrl+Scroll to edit text size, just like in browsers. Also added information about it.
 - Files now open up much faster thanks to avoiding repaints.
+- Fixed a buffer overflow in the tooltip generator and rewritten the locals scanner.
 
 Version 5.0.0.5 - 24 Oktober 2011
 
